--- a/index.html
+++ b/index.html
@@ -4,9 +4,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Kenzieflix</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Teste do Github</h1>
+    <header>
+        <img  src="./6b330685f996b8bac3b7225d407e2e21.png">
+        <h1>Quem está assistindo?</h1>
+    <div class="container">
+        <div class="boxitem">
+            <img class="perfil" src="./0b1301f0bc3589a223dece72f427b9e0.png">
+            <h5 class="nome">aline</h5>
+        </div>
+        <div class="boxitem">
+            <img class="perfil" src="./5840fb44c1a0c15176fd3093bba147f2.png">
+            <h5 class="nome">pedrinho</h5>
+        </div>
+        <div class="boxitem">
+            <img class="perfil" src="./a8a6fe58800813d3151ed393668c6fe5.png">
+            <h5 class="nome">julia</h5>
+        </div>
+        <div class="boxitem"></div>
+<input type="submit" name="gerenciador de perfis" id="gerenciador">
+    </div>
+</header>
 </body>
 </html>
+
+
