--- a/index.html
+++ b/index.html
@@ -11,22 +11,24 @@
     <header>
         <img  src="./6b330685f996b8bac3b7225d407e2e21.png">
         <h1>Quem está assistindo?</h1>
-    <div class="container">
-        <div class="boxitem">
+        <div class="container">
+        <div class="boxred">
             <img class="perfil" src="./0b1301f0bc3589a223dece72f427b9e0.png">
             <h5 class="nome">aline</h5>
         </div>
-        <div class="boxitem">
+        <div class="boxblue">
             <img class="perfil" src="./5840fb44c1a0c15176fd3093bba147f2.png">
             <h5 class="nome">pedrinho</h5>
         </div>
-        <div class="boxitem">
+        <div class="boxwhite">
             <img class="perfil" src="./a8a6fe58800813d3151ed393668c6fe5.png">
             <h5 class="nome">julia</h5>
         </div>
-        <div class="boxitem"></div>
-<input type="submit" name="gerenciador de perfis" id="gerenciador">
-    </div>
+        <div class="boxblack"></div>
+        <img class="perfil" src="./131-696x336 (4).png">
+        </div>
+        
+    <button>Gerenciar perfis</button>
 </header>
 </body>
 </html>
